# visaudio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  data-architect.md  frontend-developer.md  test-automator.md
dashboard/: index.html  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  types.ts
data/samples/: sample_500.xlsx
docs/: architecture.md
docs/specs/: architecture-spec.md
src/: cli.py
src/api/: cache.py  endpoints.py  main.py  prewarm.py  schemas.py
src/ingestion/: excel_parser.py  normalization.py  schemas.py
src/kpi/: benchmark.py  cadrage.py  conventionnement.py  hero.py  pipeline.py  retention.py  signals.py
src/rules/: diagnostics.py  engine.py  rules.yaml  schema.py
src/segmentation/: features.py  kmeans.py  labels.py  pipeline.py
src/simulation/: archetypes.py  calibration.py  metrics.py  model.py  runner.py  scenarios.py  seasonality.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_cli.py  test_e2e_p1.py  test_e2e_p2.py  test_e2e_p3.py  test_e2e_p4.py  test_e2e_segmentation.py
tests/test_api/: conftest.py  test_cache.py  test_endpoints.py  test_prewarm.py  test_schemas.py
tests/test_ingestion/: test_excel_parser.py  test_normalization.py  test_schemas.py
tests/test_kpi/: conftest.py  test_benchmark.py  test_cadrage.py  test_conventionnement.py  test_hero.py  test_pipeline.py  test_retention.py  test_signals.py
tests/test_rules/: conftest.py  test_diagnostics.py  test_engine.py  test_schema.py
tests/test_segmentation/: conftest.py  (+4 more)
(+43 files in other folders)
